# R2-Index

./: .env.example  .gitignore  app.py  pyproject.toml  vercel.json
static/: sw.js
templates/: footer.html  index.html
